welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Int
	if (versLAvant==true) avance(nbPas);
                                    ^Program:4: error: type mismatch;
 found   : Unit
 required: Int
	else recule(nbPas);
                   ^