welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean): Int={
	if (versLAvant==true) avance(nbPas);
	else recule(nbPas);
}
